--- a/src.old/_scss/variables.scss
+++ b/src.old/_scss/variables.scss
@@ -12,11 +12,7 @@ $meta-line-height:    $meta-size * $default-line-height * 1.15;
 $scaling-factor:      0.95;
 $code-scaling-factor: 0.88;
 
-$max-width: 750px;
-
 $grid-gap: 10px;
-
-$default-padding: 20px;
 
 $border-radius: 10px;
 $border-style: solid;
